[package]
name = "vx-installer"
version.workspace = true
edition.workspace = true
description = "Installation utilities and helpers for the vx universal tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

# File system and path utilities
dirs = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

# Archive handling
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

# Progress and UI
indicatif = { version = "0.17", optional = true }
futures-util = "0.3"

# Async trait support
async-trait = "0.1"

# Cryptography for checksums
sha2 = "0.10"

# Error handling
thiserror = "2.0"

# Logging (for CDN module)
tracing = { workspace = true }

# CDN acceleration (optional)
turbo-cdn = { version = "0.4", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies for file permissions

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "download_benchmark"
harness = false

[features]
default = []
# Feature for additional archive formats
extended-formats = []
# Feature for progress bars
progress = ["indicatif"]
# Feature for CDN acceleration
cdn-acceleration = ["turbo-cdn"]
