[package]
name = "vx-metrics"
version.workspace = true
edition.workspace = true
description = "Metrics, tracing and observability for vx"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
vx-paths = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry ecosystem
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
tracing-opentelemetry = "0.32.1"

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
