[package]
name = "vx-migration"
version.workspace = true
edition.workspace = true
description = "Migration framework for vx configuration and data"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["migration", "version", "upgrade", "compatibility"]
categories = ["development-tools"]

[dependencies]
# Core
vx-paths = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
] }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.4"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "test-util",
] }
