[package]
name = "vx-msbuild-bridge"
version.workspace = true
edition.workspace = true
description = "MSBuild.exe bridge that delegates to system VS MSBuild with Spectre auto-detection - used by vx MSVC provider"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "MSBuild"
path = "src/main.rs"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
# No external dependencies - self-contained bridge binary
