[package]
name = "vx-msbuild-bridge"
version.workspace = true
edition.workspace = true
description = "MSBuild.exe bridge that delegates to system VS MSBuild with Spectre auto-detection - used by vx MSVC provider"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "MSBuild"
path = "src/main.rs"

# Exclude from cargo-dist releases — this binary is embedded into the main vx
# binary at compile time via include_bytes! in vx-cli/build.rs (Windows only).
# It should NOT be distributed as a standalone release artifact.
[package.metadata.dist]
dist = false

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
# No external dependencies - self-contained bridge binary
