[package]
name = "vx-paths"
version.workspace = true
edition.workspace = true
description = "Cross-platform path management for vx tool installations"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
