[package]
name = "vx-paths"
version.workspace = true
edition.workspace = true
description = "Cross-platform path management for vx tool installations"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
