[package]
name = "vx-paths"
version.workspace = true
edition.workspace = true
description = "Cross-platform path management for vx tool installations"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vx-cache = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
