[package]
name = "vx-resolver"
version.workspace = true
edition.workspace = true
description = "Runtime resolver with dependency resolution and auto-installation"
license.workspace = true
repository.workspace = true

[dependencies]
vx-runtime = { workspace = true }
vx-paths = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
toml = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
