[package]
name = "vx-resolver"
version = { workspace = true }
edition = { workspace = true }
description = "Runtime resolver with dependency resolution and auto-installation"
license = { workspace = true }
repository = { workspace = true }

[dependencies]
vx-core = { workspace = true }
vx-runtime = { workspace = true }
vx-cache = { workspace = true }
vx-paths = { workspace = true }
vx-console = { workspace = true, features = ["progress"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "3.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["time"] }
toml = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
vx-manifest = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

