[package]
name = "vx-runtime-core"
version.workspace = true
edition.workspace = true
description = "Core runtime traits and types for vx - lightweight crate for provider development"
license.workspace = true
repository.workspace = true

[dependencies]
# Core
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time for version info
chrono = { workspace = true }

# Internal dependencies
vx-manifest = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
