[package]
name = "vx-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime system for vx - provides Runtime/Provider traits and dependency injection"
license.workspace = true
repository.workspace = true

[dependencies]
# Core
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async runtime (needs 'time' for tokio::time::timeout used in package_runtime)
tokio = { workspace = true, features = ["time"] }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }

# Utilities
chrono = { workspace = true }
which = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

# Internal dependencies
vx-core = { path = "../vx-core" }
vx-cache = { workspace = true }
vx-paths = { path = "../vx-paths" }
vx-manifest = { workspace = true }
vx-system-pm = { workspace = true }




# Dynamic library loading (optional - only needed for plugin system)
libloading = { version = "0.9", optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = ["plugin"]
# Plugin system for dynamic provider loading
plugin = ["libloading"]

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
