[package]
name = "vx-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime system for vx - provides Runtime/Provider traits and dependency injection"
license.workspace = true
repository.workspace = true

[dependencies]
# Core
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async runtime (needs 'time' for tokio::time::timeout used in package_runtime)
tokio = { workspace = true, features = ["time"] }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }

# Utilities
chrono = { workspace = true }
which = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

# Internal dependencies
vx-core = { path = "../vx-core" }
vx-cache = { workspace = true }
vx-versions = { workspace = true }
vx-paths = { path = "../vx-paths" }
vx-runtime-core = { path = "../vx-runtime-core" }
vx-manifest = { path = "../vx-manifest" }
vx-system-pm = { workspace = true }




workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = []
# Testing utilities (mock implementations) - only needed in test builds
testing = []

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
vx-manifest = { path = "../vx-manifest" }
