[package]
name = "vx-sdk"
version.workspace = true
edition.workspace = true
description = "Tool Development SDK for vx - Universal Development Tool Manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["vx", "sdk", "tools", "plugin", "development"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# Core dependencies
vx-core = { version = "0.4.0", path = "../vx-core" }
vx-installer = { version = "0.4.0", path = "../vx-installer" }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[features]
default = []
# Enable deprecated aliases for backward compatibility
compat = []
